First clean run

--- a/Stocks_BlueChips.html
+++ b/Stocks_BlueChips.html
@@ -319,9 +319,9 @@ print(script_df)</code></pre>
 entity_df &lt;- mutate(entity_df, 
     Symbol_fctr=as.factor(Symbol),
     
-    Date.my=as.Date(strptime(Date, &quot;%m/%d/%y&quot;))
+    Date.my=as.Date(strptime(Date, &quot;%m/%d/%y&quot;)),
 #     Year=year(Date.my),
-#     Month=months(Date.my),
+    Month=months(Date.my),
 #     Weekday=weekdays(Date.my)
     
                     )
@@ -337,12 +337,12 @@ print(summary(entity_df))</code></pre>
 ##                     Mean   : 77.601                      KO :480    
 ##                     3rd Qu.: 89.499                      PG :480    
 ##                     Max.   :438.902                                 
-##     Date.my          
-##  Min.   :1970-01-01  
-##  1st Qu.:1979-12-24  
-##  Median :1989-12-16  
-##  Mean   :1989-12-15  
-##  3rd Qu.:1999-12-08  
+##     Date.my              Month          
+##  Min.   :1970-01-01   Length:2400       
+##  1st Qu.:1979-12-24   Class :character  
+##  Median :1989-12-16   Mode  :character  
+##  Mean   :1989-12-15                     
+##  3rd Qu.:1999-12-08                     
 ##  Max.   :2009-12-01</code></pre>
 <pre class="r"><code>print(summary(predct_df))</code></pre>
 <pre><code>##      Date             StockPrice        Symbol         
@@ -387,6 +387,170 @@ print(sort(tapply(entity_df$StockPrice, entity_df$Symbol_fctr, mean, na.rm=TRUE)
 <pre class="r"><code>print(sort(tapply(entity_df$StockPrice, entity_df$Symbol_fctr, sd, na.rm=TRUE)))</code></pre>
 <pre><code>##       PG       BA       GE       KO      IBM 
 ## 18.19414 19.89184 23.99255 25.16629 87.82208</code></pre>
+<pre class="r"><code>myprint_df(entity_IBM_df &lt;- subset(entity_df, Symbol == &quot;IBM&quot;))</code></pre>
+<pre><code>##     Date StockPrice Symbol Symbol_fctr    Date.my    Month
+## 1 1/1/70   360.3190    IBM         IBM 1970-01-01  January
+## 2 2/1/70   346.7237    IBM         IBM 1970-02-01 February
+## 3 3/1/70   327.3457    IBM         IBM 1970-03-01    March
+## 4 4/1/70   319.8527    IBM         IBM 1970-04-01    April
+## 5 5/1/70   270.3752    IBM         IBM 1970-05-01      May
+## 6 6/1/70   267.2050    IBM         IBM 1970-06-01     June
+##        Date StockPrice Symbol Symbol_fctr    Date.my     Month
+## 91   7/1/77  266.63316    IBM         IBM 1977-07-01      July
+## 173  5/1/84  111.17909    IBM         IBM 1984-05-01       May
+## 177  9/1/84  124.35263    IBM         IBM 1984-09-01 September
+## 327  3/1/97  141.67750    IBM         IBM 1997-03-01     March
+## 414  6/1/04   89.42000    IBM         IBM 2004-06-01      June
+## 430 10/1/05   82.06333    IBM         IBM 2005-10-01   October
+##        Date StockPrice Symbol Symbol_fctr    Date.my     Month
+## 475  7/1/09   109.4368    IBM         IBM 2009-07-01      July
+## 476  8/1/09   118.4310    IBM         IBM 2009-08-01    August
+## 477  9/1/09   119.0557    IBM         IBM 2009-09-01 September
+## 478 10/1/09   122.2395    IBM         IBM 2009-10-01   October
+## 479 11/1/09   125.2735    IBM         IBM 2009-11-01  November
+## 480 12/1/09   128.8964    IBM         IBM 2009-12-01  December</code></pre>
+<pre class="r"><code>#myprint_df(entity_IBM_df &lt;- mutate(entity_IBM_df, Month=months(Date.my)))
+print(month_mean_entity_IBM_arr &lt;- 
+          sort(tapply(entity_IBM_df$StockPrice, entity_IBM_df$Month, mean, na.rm=TRUE)))</code></pre>
+<pre><code>##   October  November      July September      June    August  December 
+##  137.3466  138.0187  139.0670  139.0885  139.0907  140.1455  140.7593 
+##   January       May     April     March  February 
+##  150.2384  151.5022  152.1168  152.4327  152.6940</code></pre>
+<pre class="r"><code>print(month_mean_entity_IBM_arr &gt; mean(entity_IBM_df$StockPrice, na.rm=TRUE))</code></pre>
+<pre><code>##   October  November      July September      June    August  December 
+##     FALSE     FALSE     FALSE     FALSE     FALSE     FALSE     FALSE 
+##   January       May     April     March  February 
+##      TRUE      TRUE      TRUE      TRUE      TRUE</code></pre>
+<pre class="r"><code>myprint_df(entity_GE_df &lt;- subset(entity_df, Symbol == &quot;GE&quot;))</code></pre>
+<pre><code>##       Date StockPrice Symbol Symbol_fctr    Date.my    Month
+## 481 1/1/70   74.25333     GE          GE 1970-01-01  January
+## 482 2/1/70   69.97684     GE          GE 1970-02-01 February
+## 483 3/1/70   72.15857     GE          GE 1970-03-01    March
+## 484 4/1/70   74.25273     GE          GE 1970-04-01    April
+## 485 5/1/70   66.66524     GE          GE 1970-05-01      May
+## 486 6/1/70   67.59318     GE          GE 1970-06-01     June
+##        Date StockPrice Symbol Symbol_fctr    Date.my     Month
+## 545  5/1/75   46.53857     GE          GE 1975-05-01       May
+## 685  1/1/87   94.15762     GE          GE 1987-01-01   January
+## 777  9/1/94   49.66286     GE          GE 1994-09-01 September
+## 848  8/1/00   55.92304     GE          GE 2000-08-01    August
+## 854  2/1/01   47.05789     GE          GE 2001-02-01  February
+## 922 10/1/06   35.68091     GE          GE 2006-10-01   October
+##        Date StockPrice Symbol Symbol_fctr    Date.my     Month
+## 955  7/1/09   11.76182     GE          GE 2009-07-01      July
+## 956  8/1/09   14.02333     GE          GE 2009-08-01    August
+## 957  9/1/09   15.59190     GE          GE 2009-09-01 September
+## 958 10/1/09   15.79773     GE          GE 2009-10-01   October
+## 959 11/1/09   15.50800     GE          GE 2009-11-01  November
+## 960 12/1/09   15.75455     GE          GE 2009-12-01  December</code></pre>
+<pre class="r"><code>myprint_df(entity_KO_df &lt;- subset(entity_df, Symbol == &quot;KO&quot;))</code></pre>
+<pre><code>##        Date StockPrice Symbol Symbol_fctr    Date.my    Month
+## 1441 1/1/70   83.36810     KO          KO 1970-01-01  January
+## 1442 2/1/70   81.59105     KO          KO 1970-02-01 February
+## 1443 3/1/70   81.33810     KO          KO 1970-03-01    March
+## 1444 4/1/70   76.80591     KO          KO 1970-04-01    April
+## 1445 5/1/70   69.27857     KO          KO 1970-05-01      May
+## 1446 6/1/70   72.01545     KO          KO 1970-06-01     June
+##         Date StockPrice Symbol Symbol_fctr    Date.my     Month
+## 1461  9/1/71  107.64190     KO          KO 1971-09-01 September
+## 1467  3/1/72  127.53909     KO          KO 1972-03-01     March
+## 1469  5/1/72  129.13182     KO          KO 1972-05-01       May
+## 1565  5/1/80   34.16286     KO          KO 1980-05-01       May
+## 1594 10/1/82   44.04333     KO          KO 1982-10-01   October
+## 1738 10/1/94   49.82952     KO          KO 1994-10-01   October
+##         Date StockPrice Symbol Symbol_fctr    Date.my     Month
+## 1915  7/1/09   49.36045     KO          KO 2009-07-01      July
+## 1916  8/1/09   49.15095     KO          KO 2009-08-01    August
+## 1917  9/1/09   51.58857     KO          KO 2009-09-01 September
+## 1918 10/1/09   54.09000     KO          KO 2009-10-01   October
+## 1919 11/1/09   55.90800     KO          KO 2009-11-01  November
+## 1920 12/1/09   57.79091     KO          KO 2009-12-01  December</code></pre>
+<pre class="r"><code>print(month_mean_entity_GE_arr &lt;- 
+          sort(tapply(entity_GE_df$StockPrice, entity_GE_df$Month, mean, na.rm=TRUE)))</code></pre>
+<pre><code>##   October September      June    August      July  November  December 
+##  56.23897  56.23913  56.46844  56.50315  56.73349  57.28879  59.10217 
+##       May   January  February     March     April 
+##  60.87135  62.04511  62.52080  63.15055  64.48009</code></pre>
+<pre class="r"><code>print(month_mean_entity_KO_arr &lt;- 
+          sort(tapply(entity_KO_df$StockPrice, entity_KO_df$Month, mean, na.rm=TRUE)))</code></pre>
+<pre><code>## September   October    August      July  November  December   January 
+##  57.60024  57.93887  58.88014  58.98346  59.10268  59.73223  60.36849 
+##  February      June       May     March     April 
+##  60.73475  60.81208  61.44358  62.07135  62.68888</code></pre>
+<pre class="r"><code>myprint_df(entity_PG_df &lt;- subset(entity_df, Symbol == &quot;PG&quot;))</code></pre>
+<pre><code>##       Date StockPrice Symbol Symbol_fctr    Date.my    Month
+## 961 1/1/70  111.87429     PG          PG 1970-01-01  January
+## 962 2/1/70  111.45368     PG          PG 1970-02-01 February
+## 963 3/1/70  108.45143     PG          PG 1970-03-01    March
+## 964 4/1/70  106.28864     PG          PG 1970-04-01    April
+## 965 5/1/70   73.33286     PG          PG 1970-05-01      May
+## 966 6/1/70   48.31864     PG          PG 1970-06-01     June
+##         Date StockPrice Symbol Symbol_fctr    Date.my   Month
+## 1062  6/1/78   86.42409     PG          PG 1978-06-01    June
+## 1111  7/1/82   85.15190     PG          PG 1982-07-01    July
+## 1198 10/1/89  127.28455     PG          PG 1989-10-01 October
+## 1309  1/1/99   87.47842     PG          PG 1999-01-01 January
+## 1357  1/1/03   85.82238     PG          PG 2003-01-01 January
+## 1423  7/1/08   63.73227     PG          PG 2008-07-01    July
+##         Date StockPrice Symbol Symbol_fctr    Date.my     Month
+## 1435  7/1/09   54.04545     PG          PG 2009-07-01      July
+## 1436  8/1/09   53.09810     PG          PG 2009-08-01    August
+## 1437  9/1/09   55.76476     PG          PG 2009-09-01 September
+## 1438 10/1/09   57.51818     PG          PG 2009-10-01   October
+## 1439 11/1/09   61.29700     PG          PG 2009-11-01  November
+## 1440 12/1/09   62.05273     PG          PG 2009-12-01  December</code></pre>
+<pre class="r"><code>myprint_df(entity_BA_df &lt;- subset(entity_df, Symbol == &quot;BA&quot;))</code></pre>
+<pre><code>##        Date StockPrice Symbol Symbol_fctr    Date.my    Month
+## 1921 1/1/70   27.85381     BA          BA 1970-01-01  January
+## 1922 2/1/70   22.38105     BA          BA 1970-02-01 February
+## 1923 3/1/70   23.10524     BA          BA 1970-03-01    March
+## 1924 4/1/70   21.57136     BA          BA 1970-04-01    April
+## 1925 5/1/70   18.93286     BA          BA 1970-05-01      May
+## 1926 6/1/70   15.44318     BA          BA 1970-06-01     June
+##        Date StockPrice Symbol Symbol_fctr    Date.my Month
+## 1959 3/1/73   21.43545     BA          BA 1973-03-01 March
+## 2033 5/1/79   39.85955     BA          BA 1979-05-01   May
+## 2043 3/1/80   57.23476     BA          BA 1980-03-01 March
+## 2129 5/1/87   44.60150     BA          BA 1987-05-01   May
+## 2271 3/1/99   34.77348     BA          BA 1999-03-01 March
+## 2297 5/1/01   65.42727     BA          BA 2001-05-01   May
+##         Date StockPrice Symbol Symbol_fctr    Date.my     Month
+## 2395  7/1/09   41.48273     BA          BA 2009-07-01      July
+## 2396  8/1/09   45.99429     BA          BA 2009-08-01    August
+## 2397  9/1/09   51.36286     BA          BA 2009-09-01 September
+## 2398 10/1/09   51.15909     BA          BA 2009-10-01   October
+## 2399 11/1/09   50.69650     BA          BA 2009-11-01  November
+## 2400 12/1/09   55.02864     BA          BA 2009-12-01  December</code></pre>
+<pre class="r"><code>for (sym in unique(entity_df$Symbol)) {
+    entity_sym_df &lt;- subset(entity_df, Symbol == sym)
+    print(sprintf(&quot;sym=%s&quot;, sym))
+    print(tapply(entity_sym_df$StockPrice, entity_sym_df$Month, mean, na.rm=TRUE))
+}    </code></pre>
+<pre><code>## [1] &quot;sym=IBM&quot;
+##     April    August  December  February   January      July      June 
+##  152.1168  140.1455  140.7593  152.6940  150.2384  139.0670  139.0907 
+##     March       May  November   October September 
+##  152.4327  151.5022  138.0187  137.3466  139.0885 
+## [1] &quot;sym=GE&quot;
+##     April    August  December  February   January      July      June 
+##  64.48009  56.50315  59.10217  62.52080  62.04511  56.73349  56.46844 
+##     March       May  November   October September 
+##  63.15055  60.87135  57.28879  56.23897  56.23913 
+## [1] &quot;sym=PG&quot;
+##     April    August  December  February   January      July      June 
+##  77.68671  76.82266  78.29661  79.02575  79.61798  76.64556  77.39275 
+##     March       May  November   October September 
+##  77.34761  77.85958  78.45610  76.67903  76.62385 
+## [1] &quot;sym=KO&quot;
+##     April    August  December  February   January      July      June 
+##  62.68888  58.88014  59.73223  60.73475  60.36849  58.98346  60.81208 
+##     March       May  November   October September 
+##  62.07135  61.44358  59.10268  57.93887  57.60024 
+## [1] &quot;sym=BA&quot;
+##     April    August  December  February   January      July      June 
+##  47.04686  46.86311  46.17315  46.89223  46.51097  46.55360  47.38525 
+##     March       May  November   October September 
+##  46.88208  48.13716  45.14990  45.21603  46.30485</code></pre>
 <pre class="r"><code># Other plots:
 # print(myplot_histogram(entity_df, &quot;&lt;col1_name&gt;&quot;))
 # print(myplot_box(df=entity_df, ycol_names=&quot;&lt;col1_name&gt;&quot;))
@@ -402,13 +566,13 @@ myprint_df(symbol_cast_entity_df)</code></pre>
 ## 4 1970-04-01 21.57136 74.25273 319.8527 76.80591 106.28864
 ## 5 1970-05-01 18.93286 66.66524 270.3752 69.27857  73.33286
 ## 6 1970-06-01 15.44318 67.59318 267.2050 72.01545  48.31864
-##        Date.my        BA        GE       IBM       KO        PG
-## 91  1977-07-01  57.31789  55.35842 266.63316 38.77211  80.73474
-## 173 1984-05-01  38.39500  53.98500 111.17909 56.00773  48.17818
-## 177 1984-09-01  54.39737  56.64684 124.35263 61.79263  55.44158
-## 327 1997-03-01 104.61650 103.64150 141.67750 59.97800 122.01650
-## 414 2004-06-01  48.84905  31.96000  89.42000 51.35048  88.95524
-## 430 2005-10-01  66.88952  33.83190  82.06333 42.32619  56.09190
+##        Date.my       BA        GE      IBM       KO       PG
+## 71  1975-11-01 24.93263  48.33211 219.6200 86.01789 92.19579
+## 105 1978-09-01 68.32950  53.38400 290.2820 44.65900 88.77100
+## 363 2000-03-01 35.66565 141.70261 111.4091 47.53565 62.88174
+## 452 2007-08-01 99.26000  38.56739 111.9713 54.02304 64.35478
+## 469 2009-01-01 42.99100  14.47200  87.5965 43.91900 58.87150
+## 474 2009-06-01 47.96864  12.83273 106.8009 48.64591 51.90045
 ##        Date.my       BA       GE      IBM       KO       PG
 ## 475 2009-07-01 41.48273 11.76182 109.4368 49.36045 54.04545
 ## 476 2009-08-01 45.99429 14.02333 118.4310 49.15095 53.09810
